# pyccel-benchmarks

./: LICENSE  README.md  current_version.txt  intro.md  pyproject.toml  run_benchmark.py  setup.cfg  setup.py  test_details.md
.github/: pull_request_template.md
analysis/: plot_results_figures.py  plotting.py  tables.py
benchmark_code/: bellman_ford_mod.py  md_mod.py  numba_bellman_ford_mod.py
benchmarks/: pythran.config  pythran_gnu.config  pythran_intel.config  run_benchmark.py  run_benchmarks.py
readme/: intro.md
src/: plot_results_figures.py  plotting.py  pyccel_compilation_timings.py  pyccel_speedup.py
version_specific_results/: devel_performance_310.md  devel_performance_310_requirements.txt  devel_performance_311.md  devel_performance_311_requirements.txt  devel_performance_312.md  devel_performance_312_requirements.txt  pypi_performance_310.md  pypi_performance_310_1.10.0.md  pypi_performance_310_1.11.1.md  pypi_performance_310_1.11.2.md  pypi_performance_310_1.12.0.md  pypi_performance_310_1.12.1.md  pypi_performance_310_1.6.1.md  pypi_performance_310_1.7.0.md  pypi_performance_310_1.7.1.md  pypi_performance_310_1.7.2.md  pypi_performance_310_1.7.3.md  pypi_performance_310_1.7.4.md  pypi_performance_310_1.8.0.md  pypi_performance_310_1.8.1.md  pypi_performance_310_1.9.0.md  pypi_performance_310_1.9.1.md  pypi_performance_310_1.9.2.md  pypi_performance_310_2.0.1.md  pypi_performance_310_2.1.0.md  pypi_performance_310_2.2.0.md  pypi_performance_310_2.2.1.md  pypi_performance_310_2.2.2.md  pypi_performance_310_2.2.3.md  pypi_performance_311.md  (+92 more)
(+51 files in other folders)
