[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pyccel-benchmarks"
authors = [
    { name = "Pyccel development team" },
]
version="0.0.0"
dependencies = [
    "pyccel",
    "pythran",
    "jax",
    "numba",
    "pyperf",
    "numpy",
    "matplotlib",
]
requires-python = ">= 3.10"

[tool.setuptools]
py-modules = []
