[metadata]
name     = pyccel-benchmarks
author   = Pyccel development team
version  = 0.0.0
email    = pyccel@googlegroups.com
url      = https://github.com/pyccel/pyccel-benchmarks
descr    = Benchmark for pyccel, a python extension language using accelerators.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pyccel
    pythran
    numba
    pyperf
    numpy
    matplotlib
python_requires = >= 3.7
zip_safe = False
